--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Restore dependencies
+        run: dotnet add package Newtonsoft.Json
+
+      - name: Restore dependencies
         run: dotnet restore
 
       - name: Build the project
