--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Restore dependencies
-        run: cd Broque-Ramdisk && dotnet add package Newtonsoft.Json
+        run: cd D:\a\Broque-Ramdisk\Broque-Ramdisk && dotnet add package Newtonsoft.Json
         
       - name: Restore dependencies
         run: dotnet restore
