--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         run: dotnet clean && dotnet restore
 
       - name: Restore nuget
-        run: dotnet restore "Broque Ramdisk.csproj"
+        run: dotnet restore Broque-Ramdisk.csproj
 
 
       - name: Build the project
