--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         
       - name: Restore dependencies
-        run: dotnet clean && dotnet restore
-
-      - name: Restore nuget
-        run: dotnet restore *.csproj
-
+        run: dotnet clean && nuget restore
 
       - name: Build the project
         run: dotnet build --configuration Debug
