--- a/Broque Ramdisk/Broque Ramdisk.csproj
+++ b/Broque Ramdisk/Broque Ramdisk.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -34,32 +34,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotNetZip">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\DotNetZip.dll</HintPath>
-    </Reference>
-    <Reference Include="LBT.RestSharp">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\LBT.RestSharp.dll</HintPath>
-    </Reference>
+    <Reference Include="DotNetZip" />
+    <Reference Include="LBT.RestSharp" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="plist-cil">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\plist-cil.dll</HintPath>
-    </Reference>
-    <Reference Include="Renci.SshNet">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\Renci.SshNet.dll</HintPath>
-    </Reference>
+    <Reference Include="Newtonsoft.Json" />
+    <Reference Include="plist-cil" />
+    <Reference Include="Renci.SshNet" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite">
-      <HintPath>..\..\Broque Ramdisk v2.3.5\System.Data.SQLite.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Data.SQLite" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
