--- a/Broque Ramdisk/Broque Ramdisk.csproj
+++ b/Broque Ramdisk/Broque Ramdisk.csproj
@@ -34,19 +34,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotNetZip" />
-    <Reference Include="LBT.RestSharp" />
+    <Reference Include="DotNetZip">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\DotNetZip.dll</HintPath>
+    </Reference>
+    <Reference Include="LBT.RestSharp">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\LBT.RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json" />
-    <Reference Include="plist-cil" />
-    <Reference Include="Renci.SshNet" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="plist-cil">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\plist-cil.dll</HintPath>
+    </Reference>
+    <Reference Include="Renci.SshNet">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\Renci.SshNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
