--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,26 +15,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build application
-      run: npm run build
-
-    - name: Package build artifacts
-      run: zip -r build.zip ./build
+    - name: Package application
+      run: zip -r app.zip ./
       shell: bash
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build
-        path: build.zip
+        name: app
+        path: app.zip
 
   release:
     name: Create Release
@@ -45,7 +34,7 @@ jobs:
     - name: Download build artifacts
       uses: actions/download-artifact@v3
       with:
-        name: build
+        name: app
 
     - name: Create GitHub Release
       uses: actions/create-release@v1
@@ -65,6 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build.zip
-        asset_name: build.zip
+        asset_path: app.zip
+        asset_name: app.zip
         asset_content_type: application/zip
