--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,68 @@
-name: Build and Release
+name: Build and Publish Release
 
 on:
-  workflow_dispatch: # Allows manual trigger via GitHub UI
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '7.0'
+    - name: Set up .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.x' # Adjust this to match the project's target framework
 
-      - name: Restore dependencies
-        run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore "Broque Ramdisk/Broque Ramdisk.csproj"
 
-      - name: Build the project
-        run: dotnet publish -c Release -r win-x64 --self-contained
+    - name: Build solution
+      run: dotnet build "Broque Ramdisk.sln" --configuration Release
 
-      - name: Package app into zip
-        run: |
-          mkdir release
-          # Copy the built files into the release folder
-          copy /y .\bin\Release\net7.0\win-x64\publish\* .\release\
-          # Zip the content
-          Compress-Archive -Path .\release\* -DestinationPath .\release\app.zip
+    - name: Publish application
+      run: dotnet publish "Broque Ramdisk/Broque Ramdisk.csproj" -c Release -o ./out /p:PublishSingleFile=true /p:RuntimeIdentifier=win-x64 /p:SelfContained=true
 
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./release/app.zip
-          asset_name: app.zip
-          asset_content_type: application/zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Package the output
+      run: |
+        Compress-Archive -Path ./out/* -DestinationPath ./BroqueRamdisk.zip
+      shell: pwsh
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: BroqueRamdisk
+        path: ./BroqueRamdisk.zip
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: BroqueRamdisk
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.event.inputs.tag || 'v1.0.0' }}
+        release_name: Release ${{ github.event.inputs.tag || 'v1.0.0' }}
+        draft: false
+        prerelease: false
+
+    - name: Upload to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./BroqueRamdisk.zip
+        asset_name: BroqueRamdisk.zip
+        asset_content_type: application/zip
