--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,77 +1,40 @@
-name: Build and Publish Release
+name: Build and Test .NET Framework Project
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '7.x' # Update if using a different .NET version
+      - name: Set up NuGet
+        uses: nuget/setup-nuget@v2
 
-    - name: Restore NuGet packages
-      run: nuget restore "Broque Ramdisk.sln"
+      - name: Restore NuGet packages
+        run: nuget restore Broque\ Ramdisk.sln
 
-    - name: Install missing dependencies
-      run: |
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package System.Data.SQLite
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package Newtonsoft.Json
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package RestSharp
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package Renci.SshNet
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package Claunia.PropertyList
-        dotnet add "Broque Ramdisk/Broque Ramdisk.csproj" package Ionic.Zip
+      - name: Set up MSBuild
+        uses: microsoft/setup-msbuild@v1
 
-    - name: Build solution
-      run: dotnet build "Broque Ramdisk.sln" --configuration Release
+      - name: Build solution
+        run: msbuild Broque\ Ramdisk.sln /p:Configuration=Release
 
-    - name: Publish application
-      run: dotnet publish "Broque Ramdisk/Broque Ramdisk.csproj" -c Release -o ./out /p:PublishSingleFile=true /p:RuntimeIdentifier=win-x64 /p:SelfContained=true
+      - name: Test build output
+        run: |
+          if not exist "Broque Ramdisk/bin/Release/Broque Ramdisk.exe" (
+            echo "Build output missing. Check logs for errors."
+            exit 1
+          )
 
-    - name: Package the output
-      run: |
-        Compress-Archive -Path ./out/* -DestinationPath ./BroqueRamdisk.zip
-      shell: pwsh
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: BroqueRamdisk
-        path: ./BroqueRamdisk.zip
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: BroqueRamdisk
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.event.inputs.tag || 'v1.0.0' }}
-        release_name: Release ${{ github.event.inputs.tag || 'v1.0.0' }}
-        draft: false
-        prerelease: false
-
-    - name: Upload to Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./BroqueRamdisk.zip
-        asset_name: BroqueRamdisk.zip
-        asset_content_type: application/zip
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Broque-Ramdisk-Build
+          path: Broque Ramdisk/bin/Release/
