--- a/Broque Ramdisk/Broque Ramdisk.csproj
+++ b/Broque Ramdisk/Broque Ramdisk.csproj
@@ -1,22 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{FFA4D98A-D764-431B-B6D4-3F6C567C744B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net472</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>Broque_Ramdisk.Properties</RootNamespace>
     <AssemblyName>Broque Ramdisk</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>Broque Ramdisk.ico</ApplicationIcon>
+    <StartupObject>Class33</StartupObject>
   </PropertyGroup>
-
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite" />
-    <PackageReference Include="Newtonsoft.Json" />
-    <PackageReference Include="RestSharp" />
-    <PackageReference Include="Renci.SshNet" />
-    <PackageReference Include="Claunia.PropertyList" />
-    <PackageReference Include="DotNetZip" />
+    <Reference Include="DotNetZip">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\DotNetZip.dll</HintPath>
+    </Reference>
+    <Reference Include="LBT.RestSharp">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\LBT.RestSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="plist-cil">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\plist-cil.dll</HintPath>
+    </Reference>
+    <Reference Include="Renci.SshNet">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\Renci.SshNet.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\..\Broque Ramdisk v2.3.5\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
-
+  <ItemGroup>
+    <AppDesigner Include="Properties\" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="MainProgram.cs" />
     <Compile Include="Class33.cs" />
@@ -34,7 +84,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="-&amp;.resources" />
+    <EmbeddedResource Include="-,K-Qe%I1)dR#%.resources" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
     <None Include="Settings.settings">
@@ -42,4 +95,5 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
